_src/_includes/_assets/css/core.css
/* ... */
@keyframes scroll {
  0% { transform: translateX(0); }
  100% { transform: translateX(-100%); }  /* This value should be the total width of all the logos */
}

/* Media */

@media (min-width: 1800px) {
  content {
    max-width: 1600px;
  }
}

@media (max-width: 1190px) {
  #intro_cta {
    justify-self: end;
    grid-row: 5/5;
    grid-column: 1/-1;
  }

  .img-ticker {
    animation: ticker 120s linear infinite;
  }

  #intro_subheading, .home-subheading {
    grid-column: 1/-1;
  }
}

@media (max-width: 900px) {

  body {
    font-size: 16px;
  }

  .image-inline-text {
    width: 16px;
  }
  
  h2 { font-size: 30px; }
  h3 { font-size: 24px; }
  h4 { font-size: 18px; }
  h5 { font-size: 18px; }
  
  :is(article :is(h1, h2, h3, h4, h5, h6)) a::after {
    font-size: 12px;
  }

  #searchField {
    font-size: 20px;
  }

  #intro_subheading, .home-subheading{
    font-size: 22px;
  }

  .intro_wrapper {
    padding-bottom: 0px;
  }

  .mobile-hidden {
    display: none;
  }

  .desktop-hidden {
    display: unset;
  }

  .mobile-50-padding {
    padding-top: 50px;
  }

  #mobile_aside {
    display: inherit;
    grid-column-start: 1;
  }

  #mobile_toc {
    display: inherit;
  }

  #mobile_menu {
    display: inherit;
  }

  #corner_menu {
    display: unset;
    justify-self: end;
  }

  #menu_modal {
    display: grid;
    place-items: center;
    position: fixed;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background-color: var(--background);
    z-index: 9999;
    opacity: 0;
    visibility: hidden;
    transition: opacity 0.3s ease-in-out, visibility 0.3s ease-in-out;
  }
  
  #menu_modal.visible {
    opacity: 1;
    visibility: visible;
  }
  
  #menu_modal ul {
    display: grid;
    gap: 20px;
    justify-content: center;
    align-content: center;
    padding: 0;
    margin: 0;
    list-style: none;
  }
  
  #menu_modal a {
    text-decoration: none;
    text-align: center;
    display: block;
    padding: 10px;
    color: var(--text);
  }

  #clear-storage {
    color: var(--text);
  }
  
  #menu_close {
    position: absolute;
    top: 40px;
    right: 25px;
    border: none;
    font-size: 1.5em;
    cursor: pointer;
    background: var(--background);
    box-shadow: none;
    color: var(--text);
  }

  #navbar {
    grid-template-columns: 1fr 60px 60px 60px;
    padding: 10px 20px;
    font-size: 20px;
  }

  #darktoggle {
    justify-self: end;
    cursor: pointer;
  }

  #corner_search {
    grid-column-start: 2;
    justify-self: end;
  }

  #bayton_logo {
    padding: unset;
  }

  #intro_heading, .home-heading, #intro_text, #intro_android {
    grid-area: auto;
    border: none;
  }

  #intro_heading {
    font-size: 50px;
    padding-bottom: 30px;
  }
  
  .home-heading {
    font-size: 40px;
    padding-bottom: 30px;
  }

  #intro_android {
    padding-top: 20px;
    padding-bottom: 20px;
    grid-row: 1/1;
  }

  .aside-section ul li a.active {
    background: none;
    display: unset;
    margin: unset;
    padding: unset;
    border-radius: unset;
  }

  #post_container, #android-doc-container, #af_group, #af_group_split, #dpc_extras, #intro_block, #doc_container, #support-split {
    grid-template-columns: 1fr;
    grid-column-gap: unset;
  }

  #vendor_logo_container {
    grid-template-columns: repeat(4, 1fr);
  }

  .img-ticker {
    animation: ticker 50s linear infinite;
  }

  #partner_logos #vendor_logo_container {
    grid-template-columns: repeat(3, 1fr);
  }

  #vendor_disclaimer {
    font-size: 10px;
    padding-top: 15px; 
  }

  #partner_logos #vendor_disclaimer {
    text-align: center;
    padding-top: 5px;
  }

  .home-section {
    padding: 50px 40px
  }

  #highlight_container {
    grid-template-columns: 1fr;
    grid-gap: 50px;
  }

  #what_i_do_community, #what_i_do_consultancy, #what_i_do_validation {
    grid-column: unset;
    grid-row: unset;
  }

  #footer_logos {
    max-width: 500px;
  }

}

@media (max-width: 490px) {

  #android_head {
    max-width: 140px;
  }

  h2 { font-size: 26px; }
  h3 { font-size: 20px; }
  h4 { font-size: 16px; }
  h5 { font-size: 14px; }

  .img-ticker {
    animation: ticker 25s linear infinite;
  }
}

@media (max-width: 390px) {
  #intro_heading {
    font-size: 36px;
    text-align: center;
  }  
  
  .home-heading {
    font-size: 28px;
    text-align: center;
  }

  .home-subheading {
    font-size: 20px;
  }

  #android_head {
    max-width: 70px;
  }

  .img-ticker {
    animation: ticker 20s linear infinite;
  }
}

#aside {
  font-size: 18px;
  padding: 20px;
}

.aside-title h2 {
  margin: 0;
  padding-bottom: 20px;
  font-size: 28px;
}

.aside-section ul li a {
  text-decoration: none;
}

.aside-section ul li {
  padding: 5px 0;
}

.aside-section ul {
  padding-left: 0;
  list-style: none;
  list-style-type: none;
}

.docnav-topic-title {
  font-weight: 700;
}

.docnav-topic-title:hover {
  cursor: pointer;
}

.aside-title.increased-top-padding {
  padding-top: 40px;
}

ul.gitlog-list {
  margin-top: 0;
}

.gitlog-time {
  font-weight: 700;
}

a.gitlog-title {
  display:block;
  text-transform: lowercase;
  font-size: 16px;
}

.section-title {
  margin: 0; 
  font-size: 36px;
  font-weight: 600;
  padding: 0;
}

.post-archive {
  padding-top: 40px;
  float: right;
}

.search-results {
  padding: 0 0 0 0.25em;
}

.search-results > ul {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.search-results > ul > li {
  margin-bottom: 1em;
}

.search-results a {
  text-decoration: none;
  font-size: 1.5rem;
  font-weight: 600;
}

.search-results a:hover {
opacity: 0.8;
}

.search-results h2 {
margin-bottom: 0.5rem;
}

.search-results p:not(.search-no-results) {
font-weight: 400;
font-size: 1rem;
margin-top: 0;
}

.search-no-results {
margin-top: 1.5rem;
font-size: 1.25rem;
}

#search-field {
position: relative;
}
/* ... */

